Fix issue with formatted text overlapping the menus

--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -2,7 +2,7 @@
   @include css4 {
     background:var(--header-footer-background);
   };
-  display:flex;position:fixed;bottom:0;left:0;height:56px;width:100%;}
+  display:flex;position:fixed;bottom:0;left:0;height:56px;width:100%;z-index:2;}
 .footer div                        {display:flex;}
 .footer .left-buttons              {width:50%;justify-content:flex-start;align-items:center;}
 .footer .right-buttons             {width:50%;justify-content:flex-end;align-items:center;}
