--- a/app/styles/components/notes.scss
+++ b/app/styles/components/notes.scss
@@ -1,4 +1,4 @@
-.notes                          {position:fixed;top:0;height:100%;width:320px;@include css4{background-color:var(--menu-secondary-background-color);color:var(--menu-font-color)}}
+.notes                          {z-index:1;position:fixed;top:0;height:100%;width:320px;@include css4{background-color:var(--menu-secondary-background-color);color:var(--menu-font-color)}}
 .notes header                   {position:relative;@include css4{background-color:var(--menu-header-background);color:var(--menu-title-text-color)}text-align:center;height:54px;line-height:54px;font-size:1.05em;}
 .notes header .close-icon       {position:absolute;top:7px;left:10px}
 .notes header .close-icon:hover {cursor:pointer;opacity:0.8;}
