--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -10,7 +10,7 @@ body 				   {
 }
 div:focus              {outline:none;}
 a                      {text-decoration:none}
-aside                  {position:absolute;top:0;right:0;height:100%;width:320px;}
+aside                  {position:absolute;top:0;right:0;height:100%;width:320px;z-index:1;}
 main                   {overflow-x:hidden;overflow-y:scroll;max-height:100%;}
 #app                   {@include css4{background-color:var(--application-background);};}
 #app > div             {height:100vh;}
